--- a/app/src/main/res/layout/activity_code_lab.xml
+++ b/app/src/main/res/layout/activity_code_lab.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.inthecheesefactory.lab.designlibrary.CodeLabActivity">
 
-    <FrameLayout
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/rootLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,7 +22,7 @@
             app:backgroundTint="#a56488"
             app:fabSize="normal"/>
 
-    </FrameLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
