--- a/app/src/main/res/layout/activity_code_lab.xml
+++ b/app/src/main/res/layout/activity_code_lab.xml
@@ -24,7 +24,12 @@
                 android:background="?attr/colorPrimary"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
-
+            <android.support.design.widget.TabLayout
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"  android:id="@+id/tabLayout"
+                app:tabMode="fixed"
+                app:tabGravity="fill"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </android.support.design.widget.AppBarLayout>
 
         <LinearLayout
