--- a/app/src/main/res/layout/activity_code_lab.xml
+++ b/app/src/main/res/layout/activity_code_lab.xml
@@ -13,27 +13,38 @@
         android:layout_height="match_parent"
         >
 
+
+        <!--put toolbar in AppBarLayout to avoid CoordinatorLayout effects it-->
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <!--put toolbar in AppBarLayout to avoid CoordinatorLayout effects it-->
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:layout_scrollFlags="scroll|enterAlways" />
+            android:layout_height="256dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsingToolbarLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimary"
+                    app:layout_collapseMode="pin"
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+            </android.support.design.widget.CollapsingToolbarLayout>
 
             <!--If you want TabLayout also be hide, add: app:layout_scrollFlags="scroll|enterAlways"-->
             <android.support.design.widget.TabLayout
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"  android:id="@+id/tabLayout"
-                app:tabMode="fixed"
-                app:tabGravity="fill"
+                android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:tabGravity="fill"
+                app:tabMode="fixed"
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
 
                 />
         </android.support.design.widget.AppBarLayout>
@@ -43,6 +54,7 @@
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             >
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -60,6 +72,7 @@
                     android:layout_height="wrap_content"
                     android:text="Yo Yo"
                     />
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -71,6 +84,7 @@
                     android:layout_height="wrap_content"
                     android:text="Yo Yo"
                     />
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -82,6 +96,7 @@
                     android:layout_height="wrap_content"
                     android:text="Yo Yo"
                     />
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -93,6 +108,7 @@
                     android:layout_height="wrap_content"
                     android:text="Yo Yo"
                     />
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -104,6 +120,7 @@
                     android:layout_height="wrap_content"
                     android:text="Yo Yo"
                     />
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -115,6 +132,7 @@
                     android:layout_height="wrap_content"
                     android:text="Yo Yo"
                     />
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -126,6 +144,7 @@
                     android:layout_height="wrap_content"
                     android:text="Yo Yo"
                     />
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -137,6 +156,7 @@
                     android:layout_height="wrap_content"
                     android:text="Yo Yo"
                     />
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -148,6 +168,7 @@
                     android:layout_height="wrap_content"
                     android:text="Yo Yo"
                     />
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -159,6 +180,7 @@
                     android:layout_height="wrap_content"
                     android:text="Yo Yo"
                     />
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -170,6 +192,7 @@
                     android:layout_height="wrap_content"
                     android:text="Yo Yo"
                     />
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -181,6 +204,7 @@
                     android:layout_height="wrap_content"
                     android:text="Yo Yo"
                     />
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -192,6 +216,7 @@
                     android:layout_height="wrap_content"
                     android:text="Yo Yo"
                     />
+
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
