--- a/app/src/main/res/layout/activity_code_lab.xml
+++ b/app/src/main/res/layout/activity_code_lab.xml
@@ -13,7 +13,6 @@
         android:layout_height="match_parent"
         >
 
-
         <!--put toolbar in AppBarLayout to avoid CoordinatorLayout effects it-->
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -25,12 +24,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/header"
+                    app:layout_collapseMode="parallax"
+                    app:layout_collapseParallaxMultiplier="0.7"/>
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
+                    app:contentScrim="?attr/colorPrimary"
                     app:layout_collapseMode="pin"
                     app:layout_scrollFlags="scroll|enterAlways"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
