--- a/app/src/main/res/layout/activity_code_lab.xml
+++ b/app/src/main/res/layout/activity_code_lab.xml
@@ -21,14 +21,12 @@
             android:layout_width="match_parent"
             android:fitsSystemWindows="true"
             android:layout_height="@dimen/app_bar_height"
-            android:minHeight="15dp"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginBottom="110dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="@dimen/app_bar_height"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/header"
@@ -42,10 +40,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:gravity="top"
-                android:minHeight="56dp"
                 app:contentScrim="?attr/colorPrimary"
                 app:layout_collapseMode="pin"
-                app:layout_scrollFlags="scroll|enterAlways"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
@@ -54,7 +50,7 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll|enterAlways">
+            >
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
