--- a/app/src/main/res/layout/activity_code_lab.xml
+++ b/app/src/main/res/layout/activity_code_lab.xml
@@ -23,7 +23,7 @@
             android:layout_height="@dimen/app_bar_height"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginBottom="110dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/app_bar_height"
